# alc-crawler

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/alc_crawler/application/ports/: fetcher.py  site_parser.py  (+1 more)
src/alc_crawler/domain/: canonical_listing.py  listing.py  value_objects.py
tests/fixtures/site_591/: api_search_taipei_page1.json  search_taipei_page1.html
tests/fixtures/site_yungching/: api_list_taipei_page1.json
tests/integration/: test_cli_crawl_591.py  test_cli_crawl_yungching.py  test_cli_query.py  test_cli_regions.py  test_httpx_fetcher.py  test_playwright_fetcher.py  test_sqlite_listing_repository.py
tests/integration/tracking/: test_charts.py  test_cli.py  test_duckdb_snapshot_repository.py  test_duckdb_watchlist_repository.py
tests/unit/: test_canonical_listing.py  test_crawl_search_page_use_case.py  test_hbhousing_mapper.py  test_hbhousing_nuxt_payload.py  test_hbhousing_raw_item.py  test_hbhousing_search_urls.py  test_listing.py  test_site_591_api_parser.py  test_site_591_crawl_service.py  test_site_591_mapper.py  test_site_591_parsing_helpers.py  test_site_591_raw_item.py  test_site_591_search_parser.py  test_site_591_search_urls.py  test_smoke.py  test_value_objects.py  test_yungching_crypto.py  test_yungching_mapper.py  test_yungching_raw_item.py  test_yungching_search_urls.py
tests/unit/tracking/: test_build_market_summary.py  test_build_watch_report.py  test_crawl_run.py  test_detect_price_changes.py  test_district_summary.py  test_domain.py  test_markdown_renderer.py  test_record_daily_snapshots.py  test_watchlist_domain.py
(+43 files in other folders)
