[project]
name = "alc-crawler"
version = "0.1.0"
description = "Self-hosted crawler for Taiwan house-selling sites (591, Yungching)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "playwright>=1.45",
    "typer>=0.12",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "duckdb>=1.5.2",
    "matplotlib>=3.10.9",
    "cryptography>=43.0",
]

[project.scripts]
alc-crawler = "alc_crawler.interfaces.cli.main:app"
alc-tracker = "alc_crawler.tracking.interfaces.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alc_crawler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API uses callables in default args.
"src/alc_crawler/interfaces/cli/*.py" = ["B008"]
"src/alc_crawler/tracking/interfaces/cli/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks integration tests (may be slower)",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["alc_crawler"]
explicit_package_bases = true
